WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160415
Freeze DOMHTMLTitleElement and DOMHTMLUListElement bindings
https://bugs.webkit.org/show_bug.cgi?id=160415
Summary
Freeze DOMHTMLTitleElement and DOMHTMLUListElement bindings
Anders Carlsson
Reported
2016-08-01 12:19:01 PDT
Freeze DOMHTMLTitleElement and DOMHTMLUListElement bindings
Attachments
Patch
(22.83 KB, patch)
2016-08-01 12:22 PDT
,
Anders Carlsson
no flags
Details
Formatted Diff
Diff
Patch
(22.38 KB, patch)
2016-08-01 12:25 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2016-08-01 12:22:56 PDT
Created
attachment 285027
[details]
Patch
WebKit Commit Bot
Comment 2
2016-08-01 12:24:45 PDT
Attachment 285027
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/objc/DOMHTMLUListElement.mm:33: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMHTMLTitleElement.mm:32: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2016-08-01 12:25:07 PDT
Created
attachment 285029
[details]
Patch
Sam Weinig
Comment 4
2016-08-01 12:28:53 PDT
Comment on
attachment 285029
[details]
Patch rs=me
WebKit Commit Bot
Comment 5
2016-08-01 12:29:55 PDT
Attachment 285029
[details]
did not pass style-queue: ERROR: Source/WebCore/bindings/objc/DOMHTMLUListElement.mm:32: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] ERROR: Source/WebCore/bindings/objc/DOMHTMLTitleElement.mm:31: Found header this file implements after other header. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Sam Weinig
Comment 6
2016-08-01 12:30:36 PDT
(In reply to
comment #4
)
> Comment on
attachment 285029
[details]
> Patch > > rs=me
...though I don't approve of the license change.
Anders Carlsson
Comment 7
2016-08-01 12:33:37 PDT
(In reply to
comment #6
)
> (In reply to
comment #4
) > > Comment on
attachment 285029
[details]
> > Patch > > > > rs=me > > ...though I don't approve of the license change.
Just matching what darin did to DOMHTMLTextAreaElement.
Anders Carlsson
Comment 8
2016-08-01 12:36:30 PDT
Committed
r203981
: <
http://trac.webkit.org/changeset/203981
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug