Freeze DOMHTMLTitleElement and DOMHTMLUListElement bindings https://bugs.webkit.org/show_bug.cgi?id=160415

Reviewed by Sam Weinig.

* DerivedSources.make:
* WebCore.xcodeproj/project.pbxproj:
* bindings/objc/DOMHTMLTitleElement.h: Added.
* bindings/objc/DOMHTMLTitleElement.mm: Added.
* bindings/objc/DOMHTMLTitleElementInternal.h: Added.
* bindings/objc/DOMHTMLUListElement.h: Added.
* bindings/objc/DOMHTMLUListElement.mm: Added.
* bindings/objc/DOMHTMLUListElementInternal.h: Added.

Canonical link: https://commits.webkit.org/178552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203981 268f45cc-cd09-0410-ab3c-d52691b4dbfc